1、修复分享链接地址拼接错误问题 2、修改默认显示随机台词（不指定objId）

--- a/index.html
+++ b/index.html
@@ -26,16 +26,8 @@
         <li class="menu-right float-right">
             <ul class="reset-ul horizontal-ul">
                 <li>
-                    <i class="fa fa-google-plus-official" aria-hidden="true"></i>
-                    <a target="_blank" href="https://google.com">Google</a>
-                </li>
-                <li>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                    <a target="_blank" href="https://twitter.com">Twitter</a>
-                </li>
-                <li>
                     <i class="fa fa-github" aria-hidden="true"></i>
-                    <a target="_blank" href="https://lixiang4u.me">lixiang4u</a>
+                    <a target="_blank" href="https://github.com/lixiang4u/Notepad">GitHub</a>
                 </li>
             </ul>
         </li>
